@@ -422,8 +422,6 @@ void ScrollingTree::applyLayerPositionsInternal()
     if (!m_rootNode)
         return;
 
-    LOG_WITH_STREAM(Scrolling, stream << "ScrollingTree::applyLayerPositionsInternal - main thread " << isMainThread());
-
     applyLayerPositionsRecursive(*m_rootNode);
 }
 
