@@ -1,3 +1,14 @@
+2021-04-13  Commit Queue  <commit-queue@webkit.org>
+
+        Unreviewed, reverting r275889.
+        https://bugs.webkit.org/show_bug.cgi?id=224488
+
+        Unintentional commit
+
+        Reverted changeset:
+
+        https://trac.webkit.org/changeset/275889
+
 2021-04-13  Sihui Liu  <sihui_liu@apple.com>
 
         Make WebIDBServer not block main thread during initialization
